Personalize: index + image repo + keep NodePort 32000

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>Ratna Chhetri</title>
     <link rel="stylesheet" href="style.css">
-    <title>Mr. Rose</title>
+    <title>Test</title>
   </head>
   <body>
-    <h1>Mr. Rose</h1>
-    <h5>Lab 3-1 Works!!!!!</h5>
+    <h1>Ratna Chhetri!</h1>
+    <h5>Lab 3-1 Works!</h5>
   </body>
 </html>
